@@ -110,6 +110,8 @@
                         <option>-Dprism.subpixeltext=false</option>
                         <option>-Dprism.forceGPU=true</option>
                         <option>-Djavafx.ime=true</option>
+                        <option>--add-modules</option>
+                        <option>java.net.http</option>
                         <option>--enable-native-access=javafx.graphics,com.sun.jna</option>
                         <option>-XX:ErrorFile=logs/hs_err_pid%p.log</option>
                     </options>
